Change Log
==========


2019-04-13 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* added new feature: backup/restore/sync my keys to suppliers encrypting with my "master" key (#313)
* reorganized service_private_messages()
* populate "my-keys-synchronized" event
* added service_keys_storage()
* added service_message_history()
* disabled few unused services, development to be contunue later (#312)



2019-04-09 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* updated Copyright period to 2008-2019
* bug fix in /message/history/v1
* added test for search users
* made regression test setup more reliable
* do not load all local keys at startup
* reading remote matrix for shared files to be able to show availability  
* updated online_status() automat : reduce amount of "ping" packets sent to offline users
* added /config/tree/v1 endpoint
* improved config/*/v1 and service/list/v1 endpoints
* added ~/.bitdust/logs/packet.log to debug/monitor p2p traffic
* added ~/.bitdust/logs/event.log



2019-03-28 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* improved config/list/v1 endpoint
* changed contact_status() state machine and added bug fix in family_member()
* added more info in file/list/v1 api,
* enabled CRITICALLY_OFFLINE supplier replacing feature (#291)
* bug fix in service_employer()  (#290)
* home folder on Android is /storage/emulated/0/ (#288)
* updated setup.py (#286)
* added more flexibility in main.bpmain (#285)
* bug fix in crypt.encrypted.Block unserialize, clean up in parallelp code (#283)
* added more logging for jsn serialization and signatures verification issues debugging (#282)
* rebuilt raid_worker() to use parallelp instead of multiprocessing (#281)
* fixed .travis.yml
* able to set python version for unit tests on travis
* rebuilt raid_worker() to use parallelp instead of multiprocessing