@@ -689,8 +689,9 @@ class PacketOut(automat.Automat):
             self, self.popped_item, self.popped_item.status,
             self.popped_item.bytes_sent, self.popped_item.error_message)
         if _PacketLogFileEnabled:
-            lg.out(0, '\033[2;49;90mSENT %d bytes to %s://%s TID:%s\033[0m' % (
-                self.popped_item.bytes_sent, self.popped_item.proto, self.popped_item.host, self.popped_item.transfer_id), log_name='packet')
+            lg.out(0, '    \033[2;49;90mSENT %d bytes to %s://%s TID:%s\033[0m' % (
+                self.popped_item.bytes_sent, self.popped_item.proto,
+                self.popped_item.host, self.popped_item.transfer_id), log_name='packet', showtime=True)
         self.popped_item = None
 
     def doReportCancelItems(self, *args, **kwargs):
@@ -703,7 +704,7 @@ class PacketOut(automat.Automat):
                 self, item, 'failed', 0, self.error_message)
             if _PacketLogFileEnabled:
                 lg.out(0, '\033[2;49;90mCANCELED %s://%s TID:%s\033[0m' % (
-                    item.proto, item.host, item.transfer_id), log_name='packet')
+                    item.proto, item.host, item.transfer_id), log_name='packet', showtime=True)
 
     def doReportResponse(self, *args, **kwargs):
         """
@@ -725,7 +726,8 @@ class PacketOut(automat.Automat):
                 cb(self)
         if _PacketLogFileEnabled:
             lg.out(0, '\033[2;49;90mTIMEOUT %s(%s) sending to %s\033[0m' % (
-                self.outpacket.Command, self.outpacket.PacketID, global_id.UrlToGlobalID(self.remote_idurl)), log_name='packet')
+                self.outpacket.Command, self.outpacket.PacketID,
+                global_id.UrlToGlobalID(self.remote_idurl)), log_name='packet', showtime=True)
 
     def doReportDoneWithAck(self, *args, **kwargs):
         """
@@ -735,7 +737,7 @@ class PacketOut(automat.Automat):
         if _PacketLogFileEnabled:
             lg.out(0, '\033[0;49;95mOUT %s(%s) with %s bytes to %s (ACK received) TID:%r\033[0m' % (
                 self.outpacket.Command, self.outpacket.PacketID, self.filesize or '?', global_id.UrlToGlobalID(self.remote_idurl),
-                [i.transfer_id for i in self.results]), log_name='packet')
+                [i.transfer_id for i in self.results]), log_name='packet', showtime=True)
 
     def doReportDoneNoAck(self, *args, **kwargs):
         """
@@ -745,7 +747,7 @@ class PacketOut(automat.Automat):
         if _PacketLogFileEnabled:
             lg.out(0, '\033[0;49;95mOUT %s(%s) with %s bytes to %s TID:%r\033[0m' % (
                 self.outpacket.Command, self.outpacket.PacketID, self.filesize or '?', global_id.UrlToGlobalID(self.remote_idurl),
-                [i.transfer_id for i in self.results]), log_name='packet')
+                [i.transfer_id for i in self.results]), log_name='packet', showtime=True)
 
     def doReportFailed(self, *args, **kwargs):
         """
@@ -759,7 +761,7 @@ class PacketOut(automat.Automat):
         if _PacketLogFileEnabled:
             lg.out(0, '\033[0;49;91mFAILED %s(%s) with %s bytes to %s TID:%r : %s\033[0m' % (
                 self.outpacket.Command, self.outpacket.PacketID, self.filesize or '?', global_id.UrlToGlobalID(self.remote_idurl),
-                [i.transfer_id for i in self.results], msg), log_name='packet')
+                [i.transfer_id for i in self.results], msg), log_name='packet', showtime=True)
 
     def doReportCancelled(self, *args, **kwargs):
         """
@@ -774,7 +776,7 @@ class PacketOut(automat.Automat):
         if _PacketLogFileEnabled:
             lg.out(0, '\033[0;49;97mOUT %s(%s) with %s bytes CANCELED to %s TID:%r : %s\033[0m' % (
                 self.outpacket.Command, self.outpacket.PacketID, self.filesize or '?', global_id.UrlToGlobalID(self.remote_idurl),
-                [i.transfer_id for i in self.results], msg), log_name='packet')
+                [i.transfer_id for i in self.results], msg), log_name='packet', showtime=True)
 
     def doErrMsg(self, event, *args, **kwargs):
         """
